kubernetes/applications/personal-website/manifests/personal-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-deployment
  namespace: personal-website
spec:
  selector:
    matchLabels:
      app: personal-website
  replicas: 3
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: ghcr.io/kanareklife/personal-website:1.1.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
