kubernetes/applications/personal-website/manifests/personal-website-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: personal-website-service
  namespace: personal-website
spec:
  selector:
    app: personal-website
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
