kubernetes/applications/personal-website/manifests/personal-website-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-website-httproute
  namespace: personal-website
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: personal-website-service
          port: 80
